[gd_scene load_steps=5 format=3 uid="uid://3h2i2crwh3r8"]

[ext_resource type="Script" uid="uid://bw5emb7xjwmy3" path="res://Scripts/inimigo_4.gd" id="1_agxo5"]
[ext_resource type="PackedScene" uid="uid://dms5ihp6vh1ag" path="res://Scenes/laser.tscn" id="2_8ctau"]
[ext_resource type="Texture2D" uid="uid://brf14llgah4bj" path="res://Assets/frame_0_0.png" id="3_dpb01"]

[sub_resource type="CircleShape2D" id="CircleShape2D_54qbd"]
radius = 12.1429

[node name="inimigo4" type="Node2D"]
scale = Vector2(1.4, 1.4)
script = ExtResource("1_agxo5")
laser_scene = ExtResource("2_8ctau")

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.14286, -0.714286)
shape = SubResource("CircleShape2D_54qbd")

[node name="Timer" type="Timer" parent="."]

[node name="spawn_bala" type="Node2D" parent="."]
position = Vector2(14.2857, -0.714286)

[node name="PreviewLine" type="Line2D" parent="."]
points = PackedVector2Array(15, 0)
width = 3.0
default_color = Color(1, 0, 0, 0.501961)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("3_dpb01")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
